[gd_scene load_steps=4 format=3 uid="uid://c3rmw5n6vf0c6"]

[ext_resource type="Script" path="res://Scripts/GUI/pause_menu.gd" id="1_0a0lg"]
[ext_resource type="Script" path="res://Scripts/GUI/button.gd" id="1_7t4k6"]
[ext_resource type="Texture2D" uid="uid://ugmsu4k4e712" path="res://Sprites/GUI/Panel.png" id="2_pq6cs"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0a0lg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_pq6cs")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 170.0
offset_right = 470.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Effects" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Effects
"
script = ExtResource("1_7t4k6")

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Effects" to="." method="_on_effects_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
